deploy/staging/frontpage/frontpage-env.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontpage
  labels:
    app: frontpage
spec:
  selector:
    matchLabels:
      app: frontpage
  template:
    spec:
      containers:
        - name: frontpage
