deploy/staging/frontpage/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontpage
spec:
  ingressClassName: nginx
  rules:
    - host: frontpage-poc.staging.fellesdatakatalog.digdir.no
      http:
        paths:
          - backend:
              service:
                name: frontpage
                port:
                  number: 8080
            path: /
            pathType: Prefix
